--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     <<: *defaults
     docker:
-      - image: circleci/ruby:2.5
+      - image: circleci/ruby:2.4.2
     environment:
       BUNDLE_PATH: ~/repo/vendor/bundle
     steps:
@@ -18,7 +18,7 @@ jobs:
             - rubygems-v1-fallback
       - run:
           name: Bundle Install
-          command: bundle check || bundle install
+          command: bundle install
       - save_cache:
           key: rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
@@ -34,7 +34,7 @@ jobs:
   test_posts:
     <<: *defaults
     docker:
-      - image: circleci/ruby:2.5
+      - image: circleci/ruby:2.4.2
     steps:
       - attach_workspace:
           at: ./
@@ -45,7 +45,7 @@ jobs:
   test_files:
     <<: *defaults
     docker:
-      - image: circleci/ruby:2.5
+      - image: circleci/ruby:2.4.2
     steps:
       - attach_workspace:
           at: ./
@@ -56,7 +56,7 @@ jobs:
   test_html:
     <<: *defaults
     docker:
-      - image: circleci/ruby:2.5
+      - image: circleci/ruby:2.4.2
     steps:
       - attach_workspace:
           at: ./
@@ -98,7 +98,7 @@ jobs:
 
 workflows:
   version: 2
-  build_production:
+  build_and_deploy:
     jobs:
       - build
       - test_posts:
@@ -118,19 +118,7 @@ workflows:
           filters:
             branches:
               only: master
-  build_staging:
-    jobs:
-      - build
-      - test_posts:
-          requires:
-            - build
-      - test_files:
-          requires:
-            - build
-      - test_html:
-          requires:
-            - build
-      - deploy_production:
+      - deploy_staging:
           requires:
             - test_posts
             - test_files
