--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,8 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/ruby:2.4.2
+    environment:
+      BUNDLE_PATH: ~/repo/vendor/bundle
     steps:
       - attach_workspace:
           at: ./
@@ -46,6 +48,8 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/ruby:2.4.2
+    environment:
+      BUNDLE_PATH: ~/repo/vendor/bundle
     steps:
       - attach_workspace:
           at: ./
@@ -57,6 +61,8 @@ jobs:
     <<: *defaults
     docker:
       - image: circleci/ruby:2.4.2
+    environment:
+      BUNDLE_PATH: ~/repo/vendor/bundle
     steps:
       - attach_workspace:
           at: ./
