--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - persist_to_workspace:
           root: ./
           paths:
-            - ./
+            - ./_site
 
   test_posts:
     <<: *defaults
@@ -40,6 +40,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ./
+      - restore_cache:
+          keys:
+            - rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - rubygems-v1-fallback
       - run:
           name: Test posts
           command: bundle exec rake test_posts
@@ -53,6 +57,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ./
+      - restore_cache:
+          keys:
+            - rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - rubygems-v1-fallback
       - run:
           name: Test files
           command: bundle exec rake test_files
@@ -66,6 +74,10 @@ jobs:
     steps:
       - attach_workspace:
           at: ./
+      - restore_cache:
+          keys:
+            - rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - rubygems-v1-fallback
       - run:
           name: Test html
           command: bundle exec rake test_html
