EPNG-3531 write blog post about Team 42 internship (#297)
UC-924

* EPNG-3531 write blog post about Team 42 internship
* review feedback
* work on krypton screenshot lightbox
* typo fix
* Fix external URL linking
* Add “about the author” draft
* Add proof-read
* Spread some commas
* Make emoticons shiny
* Adjust image
* Some mini-shaping
* more review feedback + author pic
* filename reflects publication date
* Add Jens to `authors.yml`
* Add author ID to “Jens-only” posts

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -106,6 +106,12 @@
   description: is a JavaScript Engineer, Node.js lover, and Elixir alchemist.
   image: emueller.jpg
 
+- id: jfischer
+  name: Jens
+  full_name: Jens Fischer
+  description: is an experienced Java developer. He is passionate about Kotlin and Spring Boot, and loves to contribute to Open Source projects.
+  image: jfischer.jpg
+
 - id: fvollert
   name: Frederik
   full_name: Frederik
