Include QA Engineer job

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -13,9 +13,9 @@
   description: As our Process Automation Engineer based in Hamburg, you will be part of a tight-knit Agile Scrum team, who is working on a microservice-based architecture.
   location: Hamburg
 
-- title: User Experience Manager
-  link: https://www.epages.com/de/karriere/jobs/?jh=ljbhczh3vtlrfesk78wunm15ir4nqq9
-  description: Besides developing interaction concepts, you will be the contact for the UX of all products, drive user needs, and ensure the user focus in product strategies.
+- title: Quality Assurance Engineer
+  link: https://www.epages.com/de/karriere/jobs/?jh=b5omuicu10n5l3ht9qk41cx4ke28ppr
+  description: You will responsible for assuring excellent quality and usability of our next generation e-commerce platform for SMBs.
   location: Hamburg
 
 - title: Usability Engineer
