Add R&D day to event list

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -5,6 +5,13 @@
   time:
   address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
 
+- title: R&D Day 2018
+  description: We are hosting this event.
+  link: 
+  date: 12. Sept 2018
+  time:
+  address: ePages offices<br>Pilatuspool 2<br>20355 Hamburg
+
 - title: Scrum Alliance Gathering
   description: We are participating in this event.
   link: https://events.scrumalliance.org/london-2018
