--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -5,9 +5,9 @@
   time:
   address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
 
-- title: R&D Day 2018
+- title: R&amp;D Day 2018
   description: We are hosting this event.
-  link: 
+  link:
   date: 12. Sept 2018
   time:
   address: ePages offices<br>Pilatuspool 2<br>20355 Hamburg
