--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -82,6 +82,13 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: cseeger
+  name: Carsten
+  full_name: Carsten Seeger
+  description: is an Application Engineer, Sysadmin, Automation Developer, and Golang code nerd. He keeps stuff running.
+  image: cseeger.jpg
+
+
 - id: dcividanes
   name: Domingo
   full_name: Domingo
@@ -285,10 +292,3 @@
   full_name: Xavier Alvarez
   description: is a Java and Kotlin Backend Developer, and an Ubuntu fanboy.
   image: avatar_male.jpg
-
-- id: cseeger
-  name: Carsten
-  full_name: Carsten Seeger
-  description: Application Engineer, Sysadmin, Automation Developer. Golang code nerd. Keeps stuff running.
-  image: cseeger.jpg
-
