--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -7,7 +7,7 @@
 
 - title: Write the Docs Prague
   description: We are participating in this event.
-  link: https://www.socrates-conference.de/home
+  link: http://www.writethedocs.org/conf/prague/2018/
   date: 10. - 11. Sept 2018
   time:
   address: Auto Klub<br>Opletalova 29<br>Prague 1
