--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -5,6 +5,13 @@
   time:
   address: Hotel Park Soltau<br>Winsener Straße 111<br>29614 Soltau
 
+- title: Write the Docs Prague
+  description: We are participating in this event.
+  link: http://www.writethedocs.org/conf/prague/2018/
+  date: 10. - 11. Sept 2018
+  time:
+  address: Auto Klub<br>Opletalova 29<br>Prague 1
+
 - title: R&amp;D Day 2018
   description: We are hosting this event.
   link:
