Add first images

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -176,7 +176,7 @@
   name: Karsten P.
   full_name: Karsten Peskova
   description: is a qualified civil engineer and has held a variety of different jobs since joining the software industry many years ago. He enjoys working directly with our customers, but also solving technical problems of all kinds.
-  image: avatar_female.jpg
+  image: kpeskova.jpg
 
 - id: kullmann
   name: Katharina
@@ -224,7 +224,7 @@
   name: Norman
   full_name: Norman Franke
   description: keeps ePages’ shops running - day and night - and is not afraid of standby duty.
-  image: asandau.jpg
+  image: avatar_male.jpg
 
 - id: nstender
   name: Nicole
