--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,35 @@
 defaults: &defaults
   working_directory: ~/repo
 
+deploy: &deploy
+  docker:
+    - image: circleci/python:3.6.3
+  steps:
+    - attach_workspace:
+        at: ./
+    - run:
+        name: Install AWS CLI
+        command: pip install awscli --upgrade --user
+    - run:
+        name: Download epages-docs
+        command: |
+          ~/.local/bin/aws s3 sync s3://$S3_BUCKET_NAME ./_site --exclude "about/*" \
+                                                                --exclude "api/*" \
+                                                                --exclude "beyond-essence/*" \
+                                                                --exclude "blog/*" \
+                                                                --exclude "devjobs/*" \
+                                                                --exclude "api/*" \
+                                                                --exclude "assets/css/*" \
+                                                                --exclude "assets/fonts/*" \
+                                                                --exclude "assets/img/*" \
+                                                                --exclude "assets/js/*" \
+                                                                --exclude "assets/slick/*" \
+                                                                --exclude "404.html" \
+                                                                --exclude "index.html"
+    - run:
+        name: Upload to S3
+        command: ~/.local/bin/aws s3 sync ./_site s3://$S3_BUCKET_NAME/ --size-only --delete --acl public-read
+
 version: 2
 
 jobs:
@@ -36,35 +65,15 @@ jobs:
 
   deploy_production:
     <<: *defaults
-    docker:
-      - image: circleci/python:3.6.3
     environment:
       S3_BUCKET_NAME: developer.epages.com
-    steps:
-      - attach_workspace:
-          at: ./
-      - run:
-          name: Install AWS CLI
-          command: pip install awscli --upgrade --user
-      - run:
-          name: Upload to S3
-          command: ~/.local/bin/aws s3 sync ./_site s3://$S3_BUCKET_NAME/ --delete --acl public-read
+    <<: *deploy
 
   deploy_staging:
     <<: *defaults
-    docker:
-      - image: circleci/python:3.6.3
     environment:
       S3_BUCKET_NAME: staging.developer.epages.com
-    steps:
-      - attach_workspace:
-          at: ./
-      - run:
-          name: Install AWS CLI
-          command: pip install awscli --upgrade --user
-      - run:
-          name: Upload to S3
-          command: ~/.local/bin/aws s3 sync ./_site s3://$S3_BUCKET_NAME/ --size-only --acl public-read
+    <<: *deploy
 
 workflows:
   version: 2
