--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -1,34 +1,38 @@
-- title: Option 1
+- title: Experience
   entries:
-    - title: Option 1.1
-      link: beyond-essence/content/grammar.md
+    - title: Experience compass
+      link: beyond-essence/experience/compass.md
 
-    - title: Option 1.2
-      entries:
-        - title: Option 1.2.1
-          link: beyond-essence/content/grammar.md
+    - title: Target group
+      link: beyond-essence/experience/targetgroup.md
 
-        - title: Option 1.2.2
-          entries:
-            - title: Option 1.2.2.1
-              link: beyond-essence/content/grammar.md
-
-            - title: Option 1.2.2.2
-              link: beyond-essence/content/grammar.md
-
-        - title: Option 1.2.3
-          link: beyond-essence/content/grammar.md
-
-    - title: Option 1.3
-      link: beyond-essence/content/grammar.md
-
-- title: Option 2
+- title: Content
   entries:
-    - title: Option 2.1
+    - title: Tone of voice
+      link: beyond-essence/content/tone-of-voice.md
+
+    - title: Language
+      link: beyond-essence/content/language.md
+
+    - title: Grammar
       link: beyond-essence/content/grammar.md
 
-    - title: Option 2.2
-      link: beyond-essence/content/grammar.md
+    - title: Spelling and punctuation
+      link: beyond-essence/content/spelling-punctuation.md
 
-- title: Option 3
-  link: beyond-essence/content/index.md
+- title: Inventory
+  entries:
+    - title: Buttons
+      link: beyond-essence/inventory/buttons.md
+
+    - title: Checkboxes
+      link: beyond-essence/inventory/checkbox.md
+
+    - title: Empty states
+      link: beyond-essence/inventory/empty-states.md
+
+    - title: Switch buttons
+      link: beyond-essence/inventory/switch-buttons.md
+
+    - title: Toast messages
+      link: beyond-essence/inventory/toast-messages.md
