--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -167,6 +167,12 @@
   description: is a Software Developer with a passion for all things that involve lean processes.
   image: avatar_male.jpg
 
+- id: jschnegotzki
+  name: Jan S.
+  full_name: Jan Schnegotzki
+  description: is a Software Developer with a passion for all things that involve lean processes.
+  image: avatar_male.jpg
+
 - id: jviladoms
   name: Jordi
   full_name: Jordi
