Write the Blog Post for the 2018 R&D Day

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -170,7 +170,7 @@
 - id: jschnegotzki
   name: Jan S.
   full_name: Jan Schnegotzki
-  description: is a Software Developer with a passion for all things that involve lean processes.
+  description: is a Linguist gone Tech Writer who takes an interest in just about anything.
   image: avatar_male.jpg
 
 - id: jviladoms
