Include the suggestions into the text.

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -170,8 +170,8 @@
 - id: jschnegotzki
   name: Jan S.
   full_name: Jan Schnegotzki
-  description: is a Linguist gone Tech Writer who takes an interest in just about anything.
-  image: avatar_male.jpg
+  description: is a Linguist gone Tech Writer whose interest in languages somehow extended to programming languages along the way.
+  image: jschnegotzki.png
 
 - id: jviladoms
   name: Jordi
