UC-1375 Write the R&D Day 2018 Blog Post (#340)
* Write first draft for the R&D Day Blog Post
* Write the R&D Day 2018 Blog Post
* Write the Blog Post for the 2018 R&D Day
* Correct path for header image.
* Include the suggestions into the text.
* Fix the title
* Fix ampersand problem
* Fix ampersand problem
* Minor changes

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -167,6 +167,12 @@
   description: is a Software Developer with a passion for all things that involve lean processes.
   image: avatar_male.jpg
 
+- id: jschnegotzki
+  name: Jan S.
+  full_name: Jan Schnegotzki
+  description: is a Linguist gone TechWriter whose interest in languages somehow extended to programming languages along the way.
+  image: jschnegotzki.png
+
 - id: jviladoms
   name: Jordi
   full_name: Jordi
