--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -119,6 +119,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: eacunaz
+  name: Efe
+  full_name: Efe Acunaz
+  description: is a PR Manager at ePages. He is a curious learner and a keen networker. 
+  image: eacunaz.jpg
+
 - id: emueller
   name: Erik
   full_name: Erik Müller
