--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -191,6 +191,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: kdeharde
+  name: Kerstin
+  full_name: Kerstin Deharde
+  description: is a Product Owner at ePages. After starting her job career as an editor, she took the user-centric values she learned there over to Product Management.
+  image: avatar_female.jpg
+
 - id: kpeskova
   name: Karsten P.
   full_name: Karsten Peskova
