--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -194,8 +194,8 @@
 - id: kdeharde
   name: Kerstin
   full_name: Kerstin Deharde
-  description: is a Product Owner at ePages. After starting her job career as an editor, she took the user-centric values she learned there over to Product Management.
-  image: avatar_female.jpg
+  description: is a Product Owner at ePages. She started her job career as an Editor where she learned to love user-centric values. Taking this values over to Product Management truly matters to her.
+  image: kdeharde.jpg
 
 - id: kpeskova
   name: Karsten P.
