--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -194,7 +194,7 @@
 - id: kdeharde
   name: Kerstin
   full_name: Kerstin Deharde
-  description: is a Product Owner at ePages. She started her job career as an Editor where she learned to love user-centric values. Taking this values over to Product Management truly matters to her.
+  description: is a Product Owner at ePages. She started her job career as an Editor where she learned to love user-centric values. Taking these values over to Product Management truly matters to her.
   image: kdeharde.jpg
 
 - id: kpeskova
