--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -191,6 +191,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: kdeharde
+  name: Kerstin
+  full_name: Kerstin Deharde
+  description: is a Product Owner at ePages. She started her job career as an Editor where she learned to love user-centric values. Taking these values over to Product Management truly matters to her.
+  image: kdeharde.jpg
+
 - id: kpeskova
   name: Karsten P.
   full_name: Karsten Peskova
