--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -3,7 +3,7 @@
   description: As a Senior Java Developer based in Hamburg, you will be part of a tight-knit Scrum team working on a microservice-based architecture.
   location: Hamburg / Jena
 
-- title: (Senior) JavaScript Engineer
+- title: (Mid-level) JavaScript Engineer
   link: http://www.epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
   description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
   location: Hamburg
@@ -14,16 +14,16 @@
   location: Hamburg
 
 - title: Quality Assurance Engineer
-  link: https://www.epages.com/de/karriere/jobs/?jh=b5omuicu10n5l3ht9qk41cx4ke28ppr
+  link: https://epages.com/en/career/?jh=b5omuicu10n5l3ht9qk41cx4ke28ppr
   description: You will responsible for assuring excellent quality and usability of our next generation e-commerce platform for SMBs.
   location: Hamburg
 
 - title: Usability Engineer
-  link: https://www.epages.com/de/karriere/jobs/?jh=n0e5bz9kgnh75a6m5urh5fdjutk6dnr
+  link: https://epages.com/en/career/?jh=n0e5bz9kgnh75a6m5urh5fdjutk6dnr
   description: Based on the results from user research and usability tests you will develop use cases, workflows and wireframes.
   location: Hamburg
 
 - title: Ruby Developer
-  link: https://www.epages.com/de/karriere/jobs/?jh=3r12t9pp853d18z17601z39yc7tzgqs
+  link: https://epages.com/en/career/?jh=3r12t9pp853d18z17601z39yc7tzgqs
   description: As part of our small, but vital, Internal Tools team, you are responsible for the further development and maintenance of all of our crucial in-house tools.
   location: Hamburg
