Add Scrum Master event

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -19,6 +19,13 @@
   time: '18:00 - 21:00'
   address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
 
+- title: Scrum Master Lean Coffee
+  description: We are hosting this event.
+  link: https://secure.meetup.com/de-DE/register/?ctx=ref
+  date: 28. Nov 2018
+  time: '18:30 - 20:30'
+  address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
+
 - title: HackerX
   description: We are participating in this event.
   link:
