--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,33 +2,93 @@ version: 2
 
 defaults: &defaults
   working_directory: ~/repo
+  environment:
+    BUNDLE_PATH: ~/repo/vendor/bundle
+
+devportal_defaults: &devportal_defaults
+  <<: *defaults
+  docker:
+    - image: circleci/ruby:2.4.2
+
+docs_defaults: &docs_defaults
+  <<: *defaults
+  docker:
+    - image: circleci/ruby:2.4.1
 
 jobs:
-  build_test:
-    <<: *defaults
-    docker:
-      - image: circleci/ruby:2.4.2
-    environment:
-      BUNDLE_PATH: ~/repo/vendor/bundle
+  build_test_devportal:
+    <<: *devportal_defaults
     steps:
       - checkout
       - restore_cache:
           keys:
-            - rubygems-v1-{{ checksum "Gemfile.lock" }}
-            - rubygems-v1-fallback
+            - devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - devportal-rubygems-v1-fallback
       - run:
           name: Bundle Install
           command: bundle install
+      - save_cache:
+          key: devportal-rubygems-v1-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
       - run:
           name: Jekyll build
           command: bundle exec jekyll build
       - run:
           name: Test
           command: bundle exec rake test_ci
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - ./_site
+            - ./.firebaserc
+            - ./firebase.json
+
+  build_test_docs:
+    <<: *docs_defaults
+    steps:
+      - run: mkdir ~/.ssh/ && echo -e "Host github.com\n\tStrictHostKeyChecking no\n" > ~/.ssh/config
+      - run:
+          name: Download ePages Docs
+          command: git clone git@github.com:ePages-de/epages-docs.git ~/repo -b master
+      - restore_cache:
+          keys:
+            - docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
+            - docs-rubygems-v1-fallback
+      - run:
+          name: Bundle Install
+          command: bundle install
       - save_cache:
-          key: rubygems-v1-{{ checksum "Gemfile.lock" }}
+          key: docs-rubygems-v1-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
+      - run:
+          name: Jekyll build
+          command: bundle exec jekyll build
+      - run:
+          name: Test
+          command: bundle exec rake test_ci
+      - run:
+          name: Update folder name
+          command: mv _site _docs
+      - persist_to_workspace:
+          root: ./
+          paths:
+            - ./_docs
+
+  combine_projets:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/buildpack-deps:18.10
+    steps:
+      - attach_workspace:
+          at: ./
+      - run:
+          name: Install rsync
+          command: sudo apt-get -y install rsync
+      - run:
+          name: Combine projects
+          command: rsync -abviuzP _docs/ _site/
       - persist_to_workspace:
           root: ./
           paths:
@@ -43,66 +103,45 @@ jobs:
       - attach_workspace:
           at: ./
       - run:
+          name: Define environment
+          command: |
+            if [ $CIRCLE_BRANCH = "master" ]
+            then
+              echo 'export ENVIRONMENT=production' >> $BASH_ENV
+            elif [ $CIRCLE_BRANCH = "develop" ]
+            then
+              echo 'export ENVIRONMENT=development' >> $BASH_ENV
+            fi
+      - run:
           name: Install Firebase tools
           command: npm install --save-dev firebase-tools
-
       - run:
           name: Deploy to Firebase
-          command: ./node_modules/.bin/firebase deploy --token=$FIREBASE_TOKEN --non-interactive
-
-  deploy_aws:
-    <<: *defaults
-    environment:
-      S3_BUCKET_NAME: staging.developer.epages.com
-    docker:
-      - image: circleci/python:3.6.3
-    steps:
-      - attach_workspace:
-          at: ./
-      - run:
-          name: Install AWS CLI
-          command: pip install awscli --upgrade --user
-      - run:
-          name: Download epages-docs
-          command: |
-            ~/.local/bin/aws s3 sync s3://$S3_BUCKET_NAME ./_site --exclude "about/*" \
-                                                                  --exclude "api/*" \
-                                                                  --exclude "beyond-essence/*" \
-                                                                  --exclude "blog/*" \
-                                                                  --exclude "devjobs/*" \
-                                                                  --exclude "api/*" \
-                                                                  --exclude "assets/css/*" \
-                                                                  --exclude "assets/fonts/*" \
-                                                                  --exclude "assets/img/*" \
-                                                                  --exclude "assets/js/*" \
-                                                                  --exclude "assets/slick/*" \
-                                                                  --exclude "404.html" \
-                                                                  --exclude "index.html"
-      - run:
-          name: Deploy to S3
-          command: ~/.local/bin/aws s3 sync ./_site s3://$S3_BUCKET_NAME/ --size-only --delete --acl public-read
-
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - ./_site
-            - ./.firebaserc
-            - ./firebase.json
+          command: ./node_modules/.bin/firebase deploy --project $ENVIRONMENT --token=$FIREBASE_TOKEN --non-interactive
 
 workflows:
   version: 2
   build_test_deploy:
     jobs:
-      - build_test
-      - deploy_firebase:
-          requires:
-            - deploy_aws
+      - build_test_devportal
+      - build_test_docs:
           filters:
             branches:
-              only: master
-      - deploy_aws:
+              only:
+                - develop
+                - master
+      - combine_projets:
           requires:
-            - build_test
+            - build_test_devportal
+            - build_test_docs
+          filters:
+            branches:
+              only:
+                - develop
+                - master
+      - deploy_firebase:
+          requires:
+            - combine_projets
           filters:
             branches:
               only:
