Change Thomas' description

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -350,7 +350,7 @@
 - id: thirsch
   name: Thomas
   full_name: Thomas Hirsch
-  description: is a Software Engineer dedicated to solving the challenges of build- and test automation. Also a proponent of Open Source software.
+  description: is a Software Engineer, who has accepted the challenges of build- and test automationn. Also a proponent of Open Source software.
   image: thirsch.jpg
 
 - id: uabrisketa
