Fix links to job ads

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -1,15 +1,15 @@
 - title: (Senior) Java Developer
-  link: http://www.epages.com/en/career/?jh=2zr2s8sjxdwkvny4wmv8294nn0dc7j3
+  link: https://epages.com/en/career/?jh=2zr2s8sjxdwkvny4wmv8294nn0dc7j3
   description: As a Senior Java Developer based in Hamburg, you will be part of a tight-knit Scrum team working on a microservice-based architecture.
   location: Hamburg / Jena
 
 - title: (Mid-level) JavaScript Engineer
-  link: http://www.epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
+  link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
   description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
   location: Hamburg
 
 - title: DevOps Engineer
-  link: https://www.epages.com/en/career/?jh=yh9sa5545lniif5q8f0oqlsmssytutc
+  link: https://epages.com/en/career/?jh=yh9sa5545lniif5q8f0oqlsmssytutc
   description: As our Process Automation Engineer based in Hamburg, you will be part of a tight-knit Agile Scrum team, who is working on a microservice-based architecture.
   location: Hamburg
 
