Add author description and image

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -260,8 +260,8 @@
 - id: mwawrok
   name: Michaela
   full_name: Michaela Wawrok
-  description: is a UX Manager with strong focus on great usability for our merchants. She loves creating UX concepts, and intuitive user guidance.
-  image: avatar_female.jpg
+  description: is a UX Manager. She loves creating UX concepts, and is keen on data-driven work.
+  image: mwawrok.jpg
 
 - id: nfranke
   name: Norman
