--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -257,6 +257,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: mwawrok
+  name: Michaela
+  full_name: Michaela Wawrok
+  description: is a UX Manager. She loves creating UX concepts, and is keen on data-driven work.
+  image: mwawrok.jpg
+
 - id: nfranke
   name: Norman
   full_name: Norman Franke
