--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -10,7 +10,7 @@
 
 - title: Scrum Master
   link: https://epages.com/en/career/?jh=fn5wk5ky3vsly4hwoao36nvwd03ibyy
-  description: As our new Scrum Master, you will be part of our R&D Team, and responsible for guiding our Scrum teams. You work closely with the Product Owner.
+  description: As our new Scrum Master, you will be part of our R&amp;D team. You will be responsible for guiding our Scrum teams, and work closely with the PO.
   location: Hamburg
 
 - title: Quality Assurance Engineer
@@ -25,5 +25,5 @@
 
 - title: Ruby Developer
   link: https://epages.com/en/career/?jh=3r12t9pp853d18z17601z39yc7tzgqs
-  description: As part of our Tools team, together with Scrum Master and Product Owner, you are responsible for the development and maintenance of our crucial in-house tools.
+  description: As part of our Tools team, you will be responsible for the development and maintenance of our crucial in-house tools.
   location: Hamburg
