Update jobs page (#384)
* Update jobs page
* Add changes

--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -6,11 +6,11 @@
 - title: (Mid-level) JavaScript Engineer
   link: https://epages.com/en/career/?jh=0ml7dxc8s5o3bno9e2tfamouig39b86
   description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
-  location: Hamburg
+  location: Hamburg / Jena
 
-- title: DevOps Engineer
-  link: https://epages.com/en/career/?jh=yh9sa5545lniif5q8f0oqlsmssytutc
-  description: As our Process Automation Engineer based in Hamburg, you will be part of a tight-knit Agile Scrum team, who is working on a microservice-based architecture.
+- title: Scrum Master
+  link: https://epages.com/en/career/?jh=fn5wk5ky3vsly4hwoao36nvwd03ibyy
+  description: As our new Scrum Master, you will be part of our R&amp;D team. You will be responsible for guiding our Scrum teams, and work closely with the PO.
   location: Hamburg
 
 - title: Quality Assurance Engineer
@@ -18,12 +18,12 @@
   description: You will responsible for assuring excellent quality and usability of our next generation e-commerce platform for SMBs.
   location: Hamburg
 
-- title: Usability Engineer
-  link: https://epages.com/en/career/?jh=n0e5bz9kgnh75a6m5urh5fdjutk6dnr
+- title: User Experience Manager
+  link: https://epages.com/en/career/?jh=ljbhczh3vtlrfesk78wunm15ir4nqq9
   description: Based on the results from user research and usability tests you will develop use cases, workflows and wireframes.
   location: Hamburg
 
 - title: Ruby Developer
   link: https://epages.com/en/career/?jh=3r12t9pp853d18z17601z39yc7tzgqs
-  description: As part of our small, but vital, Internal Tools team, you are responsible for the further development and maintenance of all of our crucial in-house tools.
+  description: As part of our Tools team, you will be responsible for the development and maintenance of our crucial in-house tools.
   location: Hamburg
