--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -227,6 +227,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_female.jpg
 
+- id: lgerdes
+  name: Ludger
+  full_name: Ludger Gerdes
+  description: is a Key Account Manager. He is the voice of the smaller resellers in the ePages organisation. After successfully finishing the Tough Mudder challenge, he prefers playing beach volleyball in warm sand over crawling in mud.
+  image: lgerdes.jpg
+
 - id: lharder
   name: Leana
   full_name: Leana
@@ -359,6 +365,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_female.jpg
 
+- id: tgiessler
+  name: Tobias G.
+  full_name: Tobias G.
+  description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
 - id: thaapakoski
   name: Timo
   full_name: Timo Haapakoski
@@ -387,6 +399,12 @@
   name: Unai M.
   full_name: Unai M.
   description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: usauer
+  name: Ulf S.
+  full_name: Ulf Sauer
+  description: is a Software Developer, and functional programming enthusiast.
   image: avatar_male.jpg
 
 - id: vmytysk
