Fix links and update events

--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -1,13 +1,6 @@
-- title: Kubernetes/Cloud-Native Meetup
-  description: We are hosting this event.
-  link: https://www.meetup.com/de-DE/Hamburg-Kubernetes-Meetup/events/255738291/
-  date: 20. Nov 2018
-  time: '18:00 - 21:00'
-  address: ePages GmbH<br>Holstenwall 5<br>20355 Hamburg
-
 - title: Scrum Master Lean Coffee
   description: We are hosting this event.
-  link: https://secure.meetup.com/de-DE/register/?ctx=ref
+  link: https://www.meetup.com/de-DE/Scrum-Master-Meetup-Hamburg/
   date: 28. Nov 2018
   time: '18:30 - 20:30'
   address: ePages GmbH<br>Pilatuspool 2<br>20355 Hamburg
@@ -28,7 +21,7 @@
 
 - title: Academix Thüringen
   description: We are participating in this event.
-  link: https://www.thaff-thueringen.de/academix-thueringen
+  link: https://www.leg-thueringen.de/academix-thueringen/
   date: 1. Dec 2018
   time: '10:00 - 17:00'
   address: Messe Erfurt<br>Gothaer Straße 34<br>99084 Erfurt
