Update files and navigation to toggle switches

--- a/_data/beyond_essence.yml
+++ b/_data/beyond_essence.yml
@@ -31,8 +31,8 @@
     - title: Empty states
       link: beyond-essence/inventory/empty-states.md
 
-    - title: Switch buttons
-      link: beyond-essence/inventory/switch-buttons.md
+    - title: Toggle switches
+      link: beyond-essence/inventory/toggle-switches.md
 
     - title: Toast messages
       link: beyond-essence/inventory/toast-messages.md
