Add blog post about board game night

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -49,7 +49,7 @@
 - id: bbader
   name: Birgit
   full_name: Birgit Bader
-  description: is a Technical Communicator. Her heart beats for UI writing, localization, and API documentation.
+  description: is an experienced Technical Communicator. Her heart beats for UI writing, localization, and API documentation.
   image: bbader.jpg
 
 - id: bklein
