--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -64,6 +64,12 @@
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
 
+- id: broddeck
+  name: Björn
+  full_name: Björn Roddeck
+  description: is a User Interface Designer who loves CSS and LESS, and is keen on video editing. 
+  image: broddeck.jpg
+
 - id: cbreitkreuz
   name: Christian B.
   full_name: Christian B.
@@ -81,6 +87,12 @@
   full_name: Christian H.
   description: belongs to the epagesdevs content team.
   image: avatar_male.jpg
+
+- id: ckoehler
+  name: Christian K.
+  full_name: Christian Köhler
+  description: is an Application Engineer, keeping systems running, and exploring the cloud.
+  image: ckoehler.jpg
 
 - id: cmueller
   name: Christoph
@@ -310,6 +322,12 @@
   full_name: Oliver Zscheyge
   description: is a Software Engineer. He practices katas not just in coding dojos.
   image: avatar_male.jpg
+
+- id: pkalashnikov 
+  name: Pavlo
+  full_name: Pavlo Kalashnikov
+  description: is a Backend Developer experienced with languages, such as Perl, Python, and XSLT. His favorite development environment is IntelliJ IDEA.
+  image: pkalashnikov.jpg
 
 - id: ppriotto
   name: Paolo
