--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -326,7 +326,7 @@
 - id: pkalashnikov
   name: Pavlo
   full_name: Pavlo Kalashnikov
-  description: is a Backend Developer experienced with languages, such as Perl, Python, and XSLT. His favorite development environment is IntelliJ IDEA.
+  description: is a Software Backend Engineer, developing with Java, and Spring Boot. He prefers strict typed languages, and his favorite IDEA is IntelliJ.
   image: pkalashnikov.jpg
 
 - id: ppriotto
