--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -23,9 +23,15 @@
   image: avatar_male.jpg
 
 - id: agrohmann
-  name: Andreas
-  full_name: Andreas
+  name: Andreas G.
+  full_name: Andreas G.
   description: belongs to the epagesdevs content team.
+  image: avatar_male.jpg
+
+- id: aheidrich
+  name: Andreas H.
+  full_name: Andreas Heidrich
+  description: is an experienced Infrastructure System Engineer with experiences ranging from VAX/VMS to today's current Linux systems. He is a passionate photographer, and never goes without a camera.
   image: avatar_male.jpg
 
 - id: aortmann
@@ -142,6 +148,12 @@
   full_name: Erik Müller
   description: is a JavaScript Engineer, Node.js lover, and Elixir alchemist.
   image: emueller.jpg
+
+- id: fstangenberger
+  name: Frank
+  full_name: Frank Stangenberger
+  description: is an Application Engineer who studied Computer Linguistics and Pedagogy. He takes care of the on-time software updates at our providers, and is part of the 24/7 on-call service.
+  image: fstangenberger.jpg
 
 - id: fvollert
   name: Frederik
