--- a/_data/exhibitions.yml
+++ b/_data/exhibitions.yml
@@ -12,16 +12,30 @@
   time:
   address: Zentrum für IT Sicherheit<br>Lise-Meitner-Allee 4<br>44801 Bochum
 
+- title: Karrieremesse Schmalkalden
+  description: We are exhibiting at this event.
+  link: https://www.karrieremesse-schmalkalden.de/
+  date: 15. May 2019
+  time: '11:00 - 16:00'
+  address: Hochschule Schmalkalden<br>Blechhammer 9<br>98574 Schmalkalden
+
 - title: Stellenwerk Jobmesse
-  description: We are participating in this event.
+  description: We are exhibiting at this event.
   link: https://www.stellenwerk-jobmesse.de/hamburg/
   date: 4. Jun 2019
   time: '11:00 - 18:00'
   address: Universität Hamburg<br>Edmund-Siemers-Allee 1<br>20146 Hamburg
 
 - title: Firmenkontaktmesse FH Wedel
-  description: We are participating in this event.
+  description: We are exhibiting at this event.
   link: https://www.fh-wedel.de/studieren/international/incomings/
   date: 13.-14. Jun 2019
   time:
   address: FH Wedel<br>Feldstraße 143<br>22880 Wedel
+
+- title: Karrieremesse inovailmenau
+  description: We are exhibiting at this event.
+  link: https://inova-ilmenau.de/inova/
+  date: 22.-23. Oct 2019
+  time: '10:00 - 16:00'
+  address: TU Ilmenau<br>Ehrenbergstraße 51<br>98693 Ilmenau
