--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -397,8 +397,8 @@
 - id: stansil
   name: Serena
   full_name: Serena
-  description: belongs to the epagesdevs content team.
-  image: avatar_female.jpg
+  description: is a passionate Tech Recruiter, who enjoys talks about technologies, and believes in creating an awesome candidate experience journey.
+  image: stansil.jpg
 
 - id: szetzsche
   name: Sandra
