--- a/_data/jobs.yml
+++ b/_data/jobs.yml
@@ -8,14 +8,14 @@
   description: We're looking for product-aware engineers who are thoughtful, responsible and passionate builders and value user experience.
   location: Hamburg / Jena
 
-- title: Scrum Master
-  link: https://epages.com/en/career/?jh=fn5wk5ky3vsly4hwoao36nvwd03ibyy
-  description: As our new Scrum Master, you will be part of our R&amp;D team. You will be responsible for guiding our Scrum teams, and work closely with the PO.
+- title: UX Data Analyst
+  link: https://epages.com/en/career/?jh=nsu347w4nlspwko88l766ippaq8kek9
+  description: As part of our UX team you have an overview of the data sources of all products, and will be responsible for the feedback management.
   location: Hamburg
 
 - title: Quality Assurance Engineer
   link: https://epages.com/en/career/?jh=b5omuicu10n5l3ht9qk41cx4ke28ppr
-  description: You will responsible for assuring excellent quality and usability of our next generation e-commerce platform for SMBs.
+  description: You will responsible for assuring excellent quality and usability of our next generation ecommerce platform for SMBs.
   location: Hamburg
 
 - title: User Experience Manager
@@ -23,7 +23,7 @@
   description: Based on the results from user research and usability tests you will develop use cases, workflows and wireframes.
   location: Hamburg
 
-- title: Ruby Developer
-  link: https://epages.com/en/career/?jh=3r12t9pp853d18z17601z39yc7tzgqs
-  description: As part of our Tools team, you will be responsible for the development and maintenance of our crucial in-house tools.
-  location: Hamburg
+- title: Software developer - ecommerce
+  link: https://epages.com/en/career/?jh=3guijs41891ppdzqt0u0fhufovetyp7
+  description: You will be part of a Scrum team and responsible to further develop our ecommerce platform. Ideally you have knowledge of Perl and Java.
+  location: Jena
