--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -160,6 +160,12 @@
   description: is a certified Scrum Master, who passionately applies the knowledge of her psychology degree to the development of the teams, and thereby fosters agile culture.
   image: ewiedmann.jpg
 
+- id: fgehring
+  name: Friedrich
+  full_name: Friedrich Gehring
+  description: is a Software Engineer who studied Physics. When he is not sitting in front of a computer, he loves to play the cello.
+  image: fgehring.jpg
+
 - id: fstangenberger
   name: Frank
   full_name: Frank Stangenberger
@@ -286,6 +292,12 @@
   description: is a passionate Software Engineer with focus on Java and Kotlin, and a lot of experience in the Spring ecosystem. He loves open source and is the maintainer of restdocs-raml.
   image: mduesterhoeft.jpg
 
+- id: mhoehn
+  name: Michael
+  full_name: Michael Höhn
+  description: is an experienced Software Engineer with a degree in Technical Informatics. His focus is on backend implementations for our products Base and Now.
+  image: mhoehn.jpg
+
 - id: mkohl
   name: Martin
   full_name: Martin
@@ -327,6 +339,12 @@
   full_name: Natalia Zolotova
   description: is a Java developer. She loves team work and developing our microservices.
   image: nzolotova.jpg
+
+- id: ogoranskyy
+  name: Oleksandr
+  full_name: Oleksandr Goranskyy
+  description: is a Junior Software Engineer who fixes bugs for a living.
+  image: ogoranskyy.png
 
 - id: otrosien
   name: Oliver T.
