Blogpost/css color functions (#413)
* Add blog post about CSS color functions
* Embed last pen
* Getting there...
* Almost done :tada:
* Fix layout and change publication date
* Add proof-read
* Update _posts/2019/2019-02-05-css-can-do-that-color-manipulation-for-the-fearless.md
* Add mini proof-read of final section
* Apply suggestions from code review

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -373,7 +373,7 @@
 - id: ppriotto
   name: Paolo
   full_name: Paolo Priotto
-  description: is a Web Developer for all things in frontend. Although being everything but a designer, he never really gave up his passion for CSS.
+  description: is a Web Developer for all things in frontend. Although writing mostly JavaScript day in, day out, he never really gave up his passion for CSS.
   image: ppriotto.jpg
 
 - id: rbeer
